--- a/package.json
+++ b/package.json
@@ -14,13 +14,15 @@
   "dependencies": {
     "@react-spring/web": "^9.5.2",
     "@unocss/reset": "^0.44.7",
-    "ahooks": "^3.6.2",
     "await-to-js": "^3.0.0",
+    "axios": "^0.27.2",
     "dayjs": "^1.11.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "6",
-    "recoil": "^0.7.4"
+    "react-use": "^17.4.0",
+    "recoil": "^0.7.4",
+    "swr": "^1.3.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.0.3",
