--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,5 +19,4 @@ jobs:
           node-version: 16
           cache: pnpm
       - run: pnpm install
-      - run: pnpm lint
-      - run: pnpm test
+      - run: pnpm lint:fix
