--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@unocss/reset": "^0.44.7",
     "await-to-js": "^3.0.0",
     "axios": "^0.27.2",
+    "clsx": "^1.2.1",
     "dayjs": "^1.11.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
