--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "starter-react",
-  "type": "module",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -9,7 +8,8 @@
     "preview": "vite preview",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "genApi": "ts-node --project tsconfig.scripts.json ./scripts/api-generator"
   },
   "dependencies": {
     "@emotion/react": "^11.9.3",
@@ -30,6 +30,7 @@
     "swr": "^1.3.0"
   },
   "devDependencies": {
+    "@babel/core": ">=7.0.0 <8.0.0",
     "@commitlint/cli": "^17.0.3",
     "@commitlint/config-conventional": "^17.0.3",
     "@sudongyuer/eslint-config": "^0.1.3",
@@ -37,10 +38,13 @@
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.0.0",
+    "dotenv": "^16.0.1",
     "eslint": "^8.20.0",
     "husky": "^8.0.1",
     "less": "^4.1.3",
     "lint-staged": "^13.0.3",
+    "swagger-typescript-api": "^9.3.1",
+    "ts-node": "^10.9.1",
     "typescript": "^4.6.4",
     "unocss": "^0.44.7",
     "vite": "^3.0.0"
